tests/fixtures/valid/var_include_test/main.wks
# Define variable then include common file
:var "cmd" "grim"
:include "common.wks"

# Test variable redefinition after include
:var "cmd" "maim"
c "After redefine (%(cmd))" +write %{{echo %(cmd) updated}}
