tests/fixtures/invalid/var_meta_empty.wks
# Test meta-variable name resolves to empty string
:var "empty" ""
:var "%(empty)" "value"
x "Test" +write %{{echo test}}
